# uriparser

./: .gitmodules  Cargo.toml  README.md
examples/: parse.rs
src/: lib.rs
uriparser-sys/: Cargo.toml  build.rs
