[package]
name = "uriparser"
version = "0.2.0"
authors = ["Marli Frost <marli@frost.red>"]
edition = "2018"
description = "An API wrapper for the uriparser library"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uriparser-sys = { version = "0.1", path = '.\uriparser-sys\' }
